:art: Add full use-case
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -467,8 +467,8 @@
    "outputs": [],
    "source": [
     "# clean up test instance\n",
-    "!lamin delete --force test-bulkrna\n",
-    "!rm -r test-bulkrna"
+    "!rm -r test-bulkrna\n",
+    "!lamin delete --force test-bulkrna"
    ]
   }
  ],
