--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this guide we demonstrate how to annotate a complex, real world perturbation dataset (McFarland et al. 2020)[https://www.nature.com/articles/s41467-020-17440-w] in great detail.\n",
+    "In this guide we demonstrate how to annotate a complex, real world perturbation dataset [McFarland et al. 2020](https://www.nature.com/articles/s41467-020-17440-w) in great detail.\n",
     "We make use of the {mod}`wetlab` schema to enable efficient search for specific treatment targets and their associated perturbations."
    ]
   },
