:art: Data lading
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -257,8 +257,8 @@
    "outputs": [],
    "source": [
     "# clean up test instance\n",
-    "!rm -r test-spatial\n",
-    "!lamin delete --force test-spatial"
+    "!lamin delete --force test-spatial\n",
+    "!rm -r test-flow"
    ]
   }
  ],
