--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -12,6 +12,7 @@
    "metadata": {},
    "source": [
     "In this guide we demonstrate how to annotate a complex, real world perturbation dataset [McFarland et al. 2020](https://www.nature.com/articles/s41467-020-17440-w) in great detail.\n",
+    "To speed up processing, we load a downsampled version (50%) of the original dataset.\n",
     "We make use of the {mod}`wetlab` schema to enable efficient search for specific treatment targets and their associated perturbations."
    ]
   },
@@ -28,15 +29,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!wget -nc https://zenodo.org/record/7041849/files/McFarlandTsherniak2020.h5ad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -44,6 +36,7 @@
    },
    "outputs": [],
    "source": [
+    "from lamin_usecases import datasets as ds\n",
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "import wetlab as wl\n",
@@ -64,17 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = ad.read_h5ad(\"McFarlandTsherniak2020.h5ad\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Subsample to speed up subsequent steps\n",
-    "adata = adata[np.random.choice(adata.n_obs, size=int(0.5 * adata.n_obs), replace=False), :].copy()"
+    "adata = ds.anndata_mcfarland()"
    ]
   },
   {
@@ -93,6 +76,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Column is duplicated\n",
+    "adata.obs = adata.obs.drop(columns=\"percent.mito\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -102,15 +95,6 @@
    "source": [
     "# The cells were subject to several types of perturbations that we will curate separately\n",
     "adata.obs.perturbation_type.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.obs = adata.obs.drop(columns=\"percent.mito\")"
    ]
   },
   {
