--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -40,8 +40,6 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "import wetlab as wl\n",
-    "import anndata as ad\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
@@ -431,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CompoundTreatments"
+    "## Compound treatments"
    ]
   },
   {
