--- a/docs/test.ipynb
+++ b/docs/test.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import anndata as ad\n",
+    "import scanpy as sc\n",
     "adata = ad.read_h5ad(\"McFarlandTsherniak2020.h5ad\")"
    ]
   },
@@ -25,8 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "adata = adata[np.random.choice(adata.n_obs, size=int(0.2 * adata.n_obs), replace=False), :].copy()"
+    "sc.pp.subsample(adata, n_obs=1000)"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.write(\"mcfarland.h5ad\", compression=\"gzip\")"
+    "adata.write(\"mcfarland_1000.h5ad\", compression=\"gzip\")"
    ]
   },
   {
