--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "In this guide we demonstrate how to annotate a complex, real world perturbation dataset [McFarland et al. 2020](https://www.nature.com/articles/s41467-020-17440-w) in great detail.\n",
-    "To speed up processing, we load a downsampled version (50%) of the original dataset.\n",
+    "To speed up processing, we load a downsampled version of the original dataset.\n",
     "We make use of the {mod}`wetlab` schema to enable efficient search for specific treatment targets and their associated perturbations."
    ]
   },
@@ -124,7 +124,7 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curate.from_anndata(\n",
+    "curate = ln.Curator.from_anndata(\n",
     "    adata, \n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    categoricals=categoricals, \n",
@@ -231,7 +231,7 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curate.from_anndata(\n",
+    "curate = ln.Curator.from_anndata(\n",
     "    adata, \n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    categoricals=categoricals, \n",
@@ -260,7 +260,7 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curate.from_anndata(\n",
+    "curate = ln.Curator.from_anndata(\n",
     "    adata, \n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    categoricals=categoricals, \n",
