--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Curating perturbation dataset"
+    "# Perturbation"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,aws,bionty]' wetlab \n",
+    "# !pip install 'lamindb[jupyter,aws,bionty]' wetlab\n",
     "!lamin init --storage ./test-perturbation --schema bionty,wetlab"
    ]
   },
@@ -41,7 +41,8 @@
     "import bionty as bt\n",
     "import wetlab as wl\n",
     "import pandas as pd\n",
-    "pd.set_option('display.max_columns', None)\n",
+    "\n",
+    "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
     "ln.context.uid = \"K6sInKIQW5nt0000\"\n",
     "ln.context.track()"
@@ -91,6 +92,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To keep this guide focused on the perturbation metadata, we have already curated the most important non-perturbation metadata."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{dropdown} How was the original dataset curated so far?\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "import lamindb as ln\n",
+    "import bionty as bt\n",
+    "\n",
+    "categoricals = {\n",
+    "    \"DepMap_ID\": bt.CellLine.ontology_id,\n",
+    "    \"cell_line\": bt.CellLine.name,\n",
+    "    \"disease\": bt.Disease.name,\n",
+    "    \"organism\": bt.Organism.name,\n",
+    "    \"perturbation_type\": ln.ULabel.name,\n",
+    "    \"sex\": bt.Phenotype.name,\n",
+    "    \"time\": ln.ULabel.name,\n",
+    "    \"tissue_type\": ln.ULabel.name,\n",
+    "}\n",
+    "sources = {\n",
+    "    \"DepMap_ID\": bt.Source.filter(name=\"depmap\").one(),\n",
+    "    \"cell_line\": bt.Source.filter(name=\"depmap\").one(),\n",
+    "}\n",
+    "\n",
+    "curate = ln.Curator.from_anndata(\n",
+    "    adata,\n",
+    "    var_index=bt.Gene.ensembl_gene_id,\n",
+    "    categoricals=categoricals,\n",
+    "    organism=\"human\",\n",
+    "    sources=sources,\n",
+    ")\n",
+    "\n",
+    "curate.validate()\n",
+    "\n",
+    "# We found a mix of ensembl IDs and gene symbols in the var_index -> get all gene symbols to ensembl IDs\n",
+    "gene_mapper = bt.Gene.standardize(\n",
+    "    curate.non_validated[\"var_index\"],\n",
+    "    field=\"symbol\",\n",
+    "    return_field=\"ensembl_gene_id\",\n",
+    "    return_mapper=True,\n",
+    "    organism=\"human\",\n",
+    ")\n",
+    "adata.var.index = adata.var.index.map(lambda x: gene_mapper.get(x, x))\n",
+    "\n",
+    "# Since the focus of this guide is the curation of perturbations, we assume that we got the correct names by searching on LaminHub\n",
+    "adata.obs[\"disease\"] = adata.obs[\"disease\"].cat.rename_categories(\n",
+    "    {\n",
+    "        \"colon/colorectal cancer\": \"colorectal cancer\",\n",
+    "        \"rhabdoid\": \"rhabdoid tumor\",\n",
+    "        \"bladder cancer\": \"urinary bladder carcinoma\",\n",
+    "        \"endometrial/uterine cancer\": \"uterine corpus cancer\",\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "adata.obs[\"cell_line\"] = bt.CellLine.public(\n",
+    "    source=bt.Source.filter(name=\"depmap\").one()\n",
+    ").standardize(adata.obs[\"cell_line\"], field=\"name\")\n",
+    "bt.CellLine.public(source=bt.Source.filter(name=\"depmap\").one()).inspect(\n",
+    "    adata.obs[\"cell_line\"], field=\"name\"\n",
+    ")\n",
+    "\n",
+    "adata = adata[:, ~adata.var.index.isin(curate.non_validated[\"var_index\"])].copy()\n",
+    "\n",
+    "adata.obs[\"perturbation\"] = adata.obs[\"perturbation\"].cat.rename_categories(\n",
+    "    lambda category: category.lower()\n",
+    ")\n",
+    "\n",
+    "```\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -123,11 +205,11 @@
    "outputs": [],
    "source": [
     "curate = ln.Curator.from_anndata(\n",
-    "    adata, \n",
+    "    adata,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals=categoricals, \n",
+    "    categoricals=categoricals,\n",
     "    organism=\"human\",\n",
-    "    sources=sources\n",
+    "    sources=sources,\n",
     ")"
    ]
   },
@@ -141,62 +223,7 @@
    },
    "outputs": [],
    "source": [
-    "curate.add_new_from_columns()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
     "curate.validate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# We found a mix of ensembl IDs and gene symbols in the var_index -> get all gene symbols to ensembl IDs\n",
-    "gene_mapper = bt.Gene.standardize(curate.non_validated[\"var_index\"], field=\"symbol\", return_field=\"ensembl_gene_id\", return_mapper=True, organism=\"human\")\n",
-    "adata.var.index = adata.var.index.map(lambda x: gene_mapper.get(x, x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Since the focus of this guide is the curation of perturbations, we assume that we got the correct names by searching on LaminHub\n",
-    "adata.obs[\"disease\"] = adata.obs[\"disease\"].cat.rename_categories({\"colon/colorectal cancer\": \"colorectal cancer\",\n",
-    "                                                    \"rhabdoid\": \"rhabdoid tumor\",\n",
-    "                                                    \"bladder cancer\": \"urinary bladder carcinoma\",\n",
-    "                                                    \"endometrial/uterine cancer\": \"uterine corpus cancer\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "adata.obs[\"cell_line\"] = bt.CellLine.public(source=bt.Source.filter(name=\"depmap\").one()).standardize(adata.obs[\"cell_line\"], field=\"name\")\n",
-    "bt.CellLine.public(source=bt.Source.filter(name=\"depmap\").one()).inspect(adata.obs[\"cell_line\"], field=\"name\")"
    ]
   },
   {
@@ -210,68 +237,20 @@
    "outputs": [],
    "source": [
     "curate.add_validated_from_var_index()\n",
-    "curate.add_validated_from('DepMap_ID')\n",
-    "curate.add_new_from('perturbation_type')\n",
-    "curate.add_new_from('sex')\n",
-    "curate.add_new_from('time')\n",
-    "curate.add_new_from('tissue_type')\n",
-    "curate.add_validated_from('disease')\n",
-    "curate.add_new_from('cell_line')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curate = ln.Curator.from_anndata(\n",
-    "    adata, \n",
-    "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals=categoricals, \n",
-    "    organism=\"human\",\n",
-    "    sources=sources\n",
-    ")\n",
-    "curate.validate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata = adata[:, ~adata.var.index.isin(curate.non_validated[\"var_index\"])].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curate = ln.Curator.from_anndata(\n",
-    "    adata, \n",
-    "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals=categoricals, \n",
-    "    organism=\"human\",\n",
-    ")\n",
-    "curate.validate()"
+    "curate.add_validated_from(\"DepMap_ID\")\n",
+    "curate.add_new_from(\"perturbation_type\")\n",
+    "curate.add_new_from(\"sex\")\n",
+    "curate.add_new_from(\"time\")\n",
+    "curate.add_new_from(\"tissue_type\")\n",
+    "curate.add_validated_from(\"disease\")\n",
+    "curate.add_new_from(\"cell_line\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining Treatment records"
+    "## Modeling and curating perturbation metadata"
    ]
   },
   {
@@ -296,7 +275,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Genetic treatments"
+    "The {mod}`wetlab` schema BLA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Genetic treatments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Genetic treatme"
    ]
   },
   {
@@ -348,8 +341,8 @@
    "outputs": [],
    "source": [
     "sgGPX4_1_treatment = wl.GeneticTreatment(\n",
-    "            system=\"CRISPR Cas9\",\n",
-    "            name=f\"sgGPX4-1 knockdown\",\n",
+    "    system=\"CRISPR Cas9\",\n",
+    "    name=f\"sgGPX4-1 knockdown\",\n",
     ").save()\n",
     "gpx4_prot = bt.Protein.from_source(gene_symbol=\"GPX4\", organism=\"human\")[0].save()\n",
     "gpx4_target = wl.TreatmentTarget(name=\"Glutathione Peroxidase 4\").save()\n",
@@ -368,8 +361,8 @@
    "outputs": [],
    "source": [
     "sgGPX4_2_treatment = wl.GeneticTreatment(\n",
-    "            system=\"CRISPR Cas9\",\n",
-    "            name=f\"sgGPX4-2 knockdown\",\n",
+    "    system=\"CRISPR Cas9\",\n",
+    "    name=f\"sgGPX4-2 knockdown\",\n",
     ").save()\n",
     "sgGPX4_2_treatment.targets.add(gpx4_target)"
    ]
@@ -385,8 +378,8 @@
    "outputs": [],
    "source": [
     "sglacz_treatment = wl.GeneticTreatment(\n",
-    "            system=\"CRISPR Cas9\",\n",
-    "            name=f\"sgLACZ knockdown\",\n",
+    "    system=\"CRISPR Cas9\",\n",
+    "    name=f\"sgLACZ knockdown\",\n",
     ").save()\n",
     "lacz_prot = bt.Protein.from_source(name=\"beta-galactosidase\", organism=\"human\").save()\n",
     "lacz_target = wl.TreatmentTarget(name=\"beta-galactosidase\").save()\n",
@@ -405,11 +398,15 @@
    "outputs": [],
    "source": [
     "sgor2j2_treatment = wl.GeneticTreatment(\n",
-    "            system=\"CRISPR Cas9\",\n",
-    "            name=f\"or2j2 knockdown\",\n",
+    "    system=\"CRISPR Cas9\",\n",
+    "    name=f\"or2j2 knockdown\",\n",
     ").save()\n",
-    "or2j2_prot = bt.Protein.from_source(name=\"Olfactory receptor 2J2\", organism=\"human\").save()\n",
-    "or2j2_target = wl.TreatmentTarget(name=\"Olfactory receptor family 2 subfamily J member 2\").save()\n",
+    "or2j2_prot = bt.Protein.from_source(\n",
+    "    name=\"Olfactory receptor 2J2\", organism=\"human\"\n",
+    ").save()\n",
+    "or2j2_target = wl.TreatmentTarget(\n",
+    "    name=\"Olfactory receptor family 2 subfamily J member 2\"\n",
+    ").save()\n",
     "or2j2_target.proteins.add(or2j2_prot)\n",
     "sgor2j2_treatment.targets.add(or2j2_target)"
    ]
@@ -420,7 +417,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genetic_treatments = [sgGPX4_1_treatment, sgGPX4_2_treatment, sgGPX4_1_treatment, sgor2j2_treatment]"
+    "genetic_treatments = [\n",
+    "    sgGPX4_1_treatment,\n",
+    "    sgGPX4_2_treatment,\n",
+    "    sgGPX4_1_treatment,\n",
+    "    sgor2j2_treatment,\n",
+    "]"
    ]
   },
   {
@@ -464,7 +466,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# We are using the chebi/chembl chemistry/drug ontology for the drug perturbations\n",
@@ -497,7 +503,9 @@
    },
    "outputs": [],
    "source": [
-    "drug_metadata[\"perturbation\"] = drug_metadata[\"perturbation\"].cat.rename_categories(lambda category: category.lower())\n",
+    "drug_metadata[\"perturbation\"] = drug_metadata[\"perturbation\"].cat.rename_categories(\n",
+    "    lambda category: category.lower()\n",
+    ")\n",
     "compounds = wl.Compound.from_values(drug_metadata[\"perturbation\"], field=\"name\")"
    ]
   },
@@ -512,7 +520,14 @@
    "outputs": [],
    "source": [
     "# The remaining compounds are not in chebi and we create records for them\n",
-    "for missing in ['azd5591', 'brd3379', 'control', 'idasanutlin', 'prexasertib', 'taselisib']:\n",
+    "for missing in [\n",
+    "    \"azd5591\",\n",
+    "    \"brd3379\",\n",
+    "    \"control\",\n",
+    "    \"idasanutlin\",\n",
+    "    \"prexasertib\",\n",
+    "    \"taselisib\",\n",
+    "]:\n",
     "    compounds.append(wl.Compound(name=missing))\n",
     "ln.save(compounds)"
    ]
@@ -527,17 +542,21 @@
    },
    "outputs": [],
    "source": [
-    "unique_treatments = drug_metadata[['perturbation', 'dose_unit', 'dose_value']].drop_duplicates()\n",
+    "unique_treatments = drug_metadata[\n",
+    "    [\"perturbation\", \"dose_unit\", \"dose_value\"]\n",
+    "].drop_duplicates()\n",
     "\n",
     "compound_treatments = []\n",
     "for _, row in unique_treatments.iterrows():\n",
-    "    val_to_search = row['perturbation']\n",
+    "    val_to_search = row[\"perturbation\"]\n",
     "    compound = wl.Compound.search(val_to_search).first()\n",
-    "    treatment = wl.CompoundTreatment(name=compound.name,\n",
-    "                                        concentration=row['dose_value'],\n",
-    "                                        concentration_unit=row['dose_unit'])\n",
+    "    treatment = wl.CompoundTreatment(\n",
+    "        name=compound.name,\n",
+    "        concentration=row[\"dose_value\"],\n",
+    "        concentration_unit=row[\"dose_unit\"],\n",
+    "    )\n",
     "    compound_treatments.append(treatment)\n",
-    "    \n",
+    "\n",
     "ln.save(compound_treatments)"
    ]
   },
